# chessembly-bot

./: Cargo.toml  Dockerfile  LICENSE  chameleon.csm  dockerfile  wrangler.toml
src/: chessembly.rs  debug.html  engine.rs  engine_huristic.rs  lib.rs  main.rs  piece_classifier.html
src/chessembly/: behavior.rs  board.rs  game_script.rs  jit_compiler.rs  moves.rs
src/chessembly/jit_compiler/: helper.rs
