[package]
name = "chessembly-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chessembly-bot"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9.2"
urlencoding = "2.1.3"
